resolves modal bug on mobile with fixed position // now testing button selector

--- a/src/assets/scss/intro.scss
+++ b/src/assets/scss/intro.scss
@@ -15,6 +15,6 @@
     min-height: calc(100vh - 150px);
   }
   @media (max-width: 480px) {
-    min-height: calc(100vh - 150px);
+    min-height: calc(100vh - 100px);
   }
 }
