--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -51,7 +51,7 @@ main {
     padding: 200px 50px 0px 50px;
   }
   @media (max-width: 480px) {
-    padding: 150px 25px 25px 25px;
+    padding: 100px 25px 25px 25px;
   }
   // &.fillHeight {
   //   padding: 0 150px;
